Fixed input overflow

--- a/assets/css/phantom.less
+++ b/assets/css/phantom.less
@@ -402,7 +402,6 @@ article {
         outline: none;
         border: 1px solid #ddd;
         padding: 6px 12px;
-        width: 100%;
         -webkit-transition: border 0.25s;
         -moz-transition: border 0.25s;
         -ms-transition: border 0.25s;
